--- a/less/project/ferret/style_lists.less
+++ b/less/project/ferret/style_lists.less
@@ -49,14 +49,21 @@ ul {
 			margin-left: 10px;
 			font-size: 80%;
 			
-			&:first-child {margin: 0;}
+			&:first-child {
+				margin: 0;
+			}
 			
-			&:last-child {padding: 0; border: 0;}
+			&:last-child {
+				padding: 0;
+				border: 0;
+			}
 		}
 		
 	}
 	
-	&.with-spacing {margin-bottom: @paragraph-margin;}
+	&.with-spacing {
+		margin-bottom: @paragraph-margin;
+	}
 }
 
 ol {
@@ -88,8 +95,12 @@ dl {
 		letter-spacing: @base-letter-spacing;
 		margin-bottom: @list-item-margin-bottom;
 		
-		&:last-child {margin-bottom: 0;}
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 	
-	&.with-spacing {margin-bottom: @paragraph-margin;}
+	&.with-spacing {
+		margin-bottom: @paragraph-margin;
+	}
 }
