--- a/less/project/project_styles.less
+++ b/less/project/project_styles.less
@@ -1,7 +1,9 @@
 // Project Styles
 
 
-/* JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT */
+// JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT
+@import 'ferret/style_header'; // OUT OF DATE CODE
+
 section {
 	padding: 20px 0;
 	border-bottom: 1px solid #e1e1e1;
