--- a/less/project/ferret/box_grid.less
+++ b/less/project/ferret/box_grid.less
@@ -1,14 +1,49 @@
-// The Box Grid - Version 2.0
+// The Box Grid - Version 3.0
 // Written by: Sean Stopnik
 // Email: thelifemgmt@gmail.com
 
 
-/* Box Grid */
+// Box Grid
 * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	html .row {height: 1%;}
+	
+	html .row {
+		height: 1%;
+	}
+	
+	@media @device {
+		-webkit-text-size-adjust: none;
+	}
+}
+
+
+// Container
+.container {
+	position: relative;
+	margin: 0 auto;
+	width: 100%;
+	
+	.ie8 & {
+		width: @grid-normal;
+	}
+	
+	@media @device {
+		padding: 0 10px;
+	}
+	
+	@media @tablet {
+		width: 768px;
+	}
+	
+	@media @desktop {
+		width: @grid-normal;
+	}
+	
+	@media @large-desktop {
+		width: @grid-wide;
+	}
 }
 
 
@@ -16,26 +51,33 @@
 .row {
 	display: block;
 	width: 100%;
+	
 	.row {
 		margin: 0 -10px;
 		width: auto;
 	}
+	
 	&.with-spacing {
 		margin-bottom: @grid-row-with-spacing;
 	}
+	
 	&.with-less-spacing {
 		margin-bottom: @grid-row-with-spacing / 2;
 	}
+	
 	&.with-more-spacing {
 		margin-bottom: @grid-row-with-spacing * 2;
 	}
+	
 	img {
 		display: block;
 		max-width: 100%;
 		height: auto;
 	}
+	
 	&.centered {
 		text-align: center;
+		
 		div {
 			float: none;
 			display: inline-block;
@@ -43,26 +85,32 @@
 			margin: 0 -2px;
 		}
 	}
+	
 	&.no-gutters {
 		padding: 0 @grid-gutter-width;
+		
 		[class*="box-"] {
 			padding: 0;
 		}
 	}
+	
 	&.large-gutters {
+		
 		[class*="box-"] {
 			padding: 0 @grid-gutter-width * 2;
 		}
 	}
 	
 	// Auto Clearing
-	&:before, &:after {
+	&:before,
+	&:after {
 		display: block;
 		height: 0;
 		overflow: hidden;
 		visibility: hidden;
 		content: "";
 	}
+	
 	&:after {clear: both;}
 }
 
@@ -75,8 +123,11 @@
 	}
 	.grid-loop(@index + 1);
 }
+
 .grid-loop (@grid-boxes) {}
+
 .grid-loop (@iterations);
+
 .box- {
 	&full {width: 100%;}
 	&half {width: 50%;}
@@ -86,70 +137,30 @@
 	&6th {width: 100% / 6;}
 }
 
-
-// Box Positioning
-[class^="box-"] {
-	float: left;
-	padding: 0 @grid-gutter-width;
-}
-
-
-// Container
-.container {
-	position: relative;
-	margin: 0 auto;
-	
-	.ie8 & {
-		width: @grid-normal;
-	}
-}
-
-
-// Mobile Grouping
 @media @mobile {
-	.container {width: 100%;}
-}
-@media @device {
-	* {-webkit-text-size-adjust: none;}
-	.container {padding: 0 10px; overflow: hidden;}
-}
-
-
-// Mobile Phone
-@media @mobile {
-	[class*="box-"] {
+	[class^="box-"] {
 		width: 100%;
 		margin-bottom: 20px;
 	}
 }
 
-
-// Small Tablets
-@media @small-tablet {
-	[class*="box-"] {
+@media @device {
+	[class^="box-"] {
 		width: 100%;
 	}
-	.box- {
-		&-half, &5th, &6th {
+	
+	.box- {		
+		&-half,
+		&5th,
+		&6th {
 			width: 50%;
 		}
 	}
 }
 
 
-// iPad & Large Tablets
-@media @tablet {
-	.container {width: 768px;}
-}
-
-
-// Desktop
-@media @desktop {
-	.container {width: @grid-normal;}
-}
-
-
-// Large Desktop
-@media @large-desktop {
-	.container {width: @grid-wide;}
+// Box Positioning
+[class^="box-"] {
+	float: left;
+	padding: 0 @grid-gutter-width;
 }
