--- a/less/project/ferret/box_grid_ie6_7.less
+++ b/less/project/ferret/box_grid_ie6_7.less
@@ -1,12 +1,20 @@
 // Box Grid Support for IE6-7
 
 
-/* Rows */
+// Container
+.ie6,
+.ie7,
+.ie8 {
+	.container {width: 960px;}	
+}
+
+// Rows
 .ie6 .row.row {width: 105%;}
 
 
-/* Box Widths */
-.ie6, .ie7 {
+// Widths
+.ie6,
+.ie7 {
 	.box-1 {width: 40px;}
 	.box-2 {width: 100px;}
 	.box-3 {width: 160px;}
@@ -14,7 +22,8 @@
 	.box-5 {width: 280px;}
 	.box-6 {width: 340px;}
 	.box-7 {width: 400px;}
-	.box-8 {width: 460px;}
+	.box-8,
+	.box-half {width: 460px;}
 	.box-9 {width: 520px;}
 	.box-10 {width: 580px;}
 	.box-11 {width: 640px;}
@@ -22,19 +31,19 @@
 	.box-13 {width: 760px;}
 	.box-14 {width: 820px;}
 	.box-15 {width: 880px;}
-	.box-16 {width: 940px;}
-	.box-3.sixth {width: 140px;}
-	.box-4.fifth {width: 172px;}
-	.box-5.third{width: 300px;}
-	.box-10.two-third{width: 620px;}
+	.box-16,
+	.box-full {width: 940px;}
+	.box-3rd {width: 300px;}
+	.box-2-3rd {width: 620px;}
+	.box-5th {width: 172px;}
+	.box-6th {width: 140px;}
+	
+	// Positioning
 	.box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8,
 	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
 	.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
-	.box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {
+	.box-full, .box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {
 		float: left;
 		padding: 0 10px;
 	}
-}
-.i6, .ie7, .ie8 {
-	.container {width: 960px;}	
 }
