--- a/less/project/ferret/style_tables.less
+++ b/less/project/ferret/style_tables.less
@@ -3,48 +3,80 @@
 
 table {
 	width: 100%;
+	
 	thead {
 		background: @table-header-bg;
+		
 		th {
 			color: @table-header-color;
 			.font-bold;
 			font-size: @table-header-font-size;
-			&:first-child {.radius(3px 0 0 0);}
-			&:last-child {.radius(0 3px 0 0);}
+			
+			&:first-child {
+				.radius(3px 0 0 0);
+			}
+			
+			&:last-child {
+				.radius(0 3px 0 0);
+			}
 		}
 	}
-	th, td {
+	
+	th,
+	td {
 		text-align: left;
 		padding: 5px 10px;
 	}
+	
 	tbody {
 		font-size: @table-font-size;
 		letter-spacing: @base-letter-spacing;
+		
 		tr {
 			.transition;
+			
 			&:nth-child(even) {
 				background: @table-row-bg;
+				
 				&:hover {
 					background: @table-row-bg - 10;
 				}
 			}
+			
 			&:last-child td {
-				&:first-child {.radius(0 0 0 3px);}
-				&:last-child {.radius(0 0 3px 0);}
+				&:first-child {
+					.radius(0 0 0 3px);
+				}
+				
+				&:last-child {
+					.radius(0 0 3px 0);
+				}
 			}
-			&:hover {color: @dark;}
+			
+			&:hover {
+				color: @dark;
+			}
 		}
 	}
+	
 	tfoot {
 		background: @table-footer-bg;
+		
 		td {
 			color: @table-footer-color;
 			.font-bold;
 			font-size: @table-footer-font-size;
-			&:first-child {.radius(0 0 0 3px);}
-			&:last-child {.radius(0 0 3px 0);}	
+			
+			&:first-child {
+				.radius(0 0 0 3px);
+			}
+			
+			&:last-child {
+				.radius(0 0 3px 0);
+			}	
 		}
 	}
+	
 	&.with-footer {
 		tbody {
 			tr:last-child td {
