--- a/less/project/ferret/header.less
+++ b/less/project/ferret/header.less
@@ -1,7 +1,27 @@
 // Demo Header Styles (OUT OF DATE CODE - NOT RECOMMENDED FOR USE)
 
 
+// I REPEAT - DO NOT USE
+
+
 // Header and Nav
+@nav-bar-position: fixed;
+@nav-bar-bg: @dark;
+@nav-bar-height: 60px;
+@nav-position: right;
+@nav-spacing: 20px;
+@nav-font: @font-bold;
+@nav-font-size: 12px;
+@nav-font-weight: normal;
+@nav-color: @white;
+@nav-color-hover: @orange;
+@mobile-nav-bg: @dark;
+@mobile-nav-button: @dark + 20;
+@mobile-nav-button-height: 40px;
+@mobile-nav-menu-height: 60px;
+@mobile-nav-font-size: 12px;
+
+
 header {
 	position: @nav-bar-position;
 	width: 100%;
