--- a/less/project/ferret/tooltips.less
+++ b/less/project/ferret/tooltips.less
@@ -1,6 +1,6 @@
 // Tooltip Default Styles
 
-/* Tooltip */
+// Tooltip
 .tooltip {
 	position: relative;
 	
@@ -35,7 +35,6 @@
 			margin-left: -7px;
 		}
 		
-		// Media
 		@media @mobile {
 			display: none !important;
 		}
