--- a/css/ferret.css
+++ b/css/ferret.css
@@ -815,7 +815,6 @@ input[type='submit'].button.x-large {
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
-  margin-bottom: 20px;
 }
 .inputfield:hover {
   border-color: #acacac;
@@ -837,9 +836,9 @@ select.inputfield:focus {
 textarea.inputfield {
   height: 140px;
 }
-@media (max-width: 599px) {
+@media (min-width: 600px) {
   .inputfield {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
 }
 .checkbox,
@@ -850,7 +849,7 @@ textarea.inputfield {
   border: 1px solid #e1e1e1;
   background: #ffffff;
   -webkit-appearance: none;
-  margin: 0 7px 20px 0;
+  margin: 0 7px 0 0;
   cursor: pointer;
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
@@ -866,10 +865,10 @@ textarea.inputfield {
   border-color: #ebc855;
   background: #f8edc7;
 }
-@media (max-width: 599px) {
+@media (min-width: 600px) {
   .checkbox,
   .radio-button {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
 }
 .checkbox {
@@ -969,16 +968,14 @@ dl dd:last-child {
 dl.with-spacing {
   margin-bottom: 20px;
 }
-/* Tabs */
 ul.tabs-nav {
   float: left;
   width: 100%;
-  border-bottom: 1px solid #e1e1e1;
   margin: 5px 0 20px;
 }
-@media (max-width: 599px) {
+@media (min-width: 600px) {
   ul.tabs-nav {
-    border: none;
+    border-bottom: 1px solid #e1e1e1;
   }
 }
 ul.tabs-nav li {
@@ -1115,7 +1112,6 @@ table tfoot td:last-child {
 table.with-footer tbody tr:last-child td {
   border-radius: 0;
 }
-/* Tooltip */
 .tooltip {
   position: relative;
 }
@@ -1300,12 +1296,9 @@ section {
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 20px;
 }
-.row {
-  margin-bottom: 20px;
-}
-@media (max-width: 599px) {
+@media (min-width: 600px) {
   .row {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
 }
 .row .row {
