--- a/less/ferret.less
+++ b/less/ferret.less
@@ -12,20 +12,20 @@ Email: thelifemgmt@gmail.com
 
 // Base Styles (Do Not Remove)
 @import "project/ferret/box_grid.less";
-@import "project/ferret/style_fonts.less";
-@import "project/ferret/style_reset.less";
-@import "project/ferret/style_base.less";
-@import "project/ferret/style_typography.less";
-@import "project/ferret/style_mixins.less";
+@import "project/ferret/fonts.less";
+@import "project/ferret/reset.less";
+@import "project/ferret/base.less";
+@import "project/ferret/typography.less";
+@import "project/ferret/mixins.less";
 
 
 // Extras (Add or Remove as Needed)
-@import "project/ferret/style_buttons.less"; // Button Styles
-@import "project/ferret/style_forms.less"; // Form Styles
-@import "project/ferret/style_lists.less"; // List Styles
-@import "project/ferret/style_tabs.less"; // Content Tabs Styles
-@import "project/ferret/style_tables.less"; // Table Styles
-@import "project/ferret/style_tooltips.less"; // Tooltip Styles
+@import "project/ferret/buttons.less"; // Button Styles
+@import "project/ferret/forms.less"; // Form Styles
+@import "project/ferret/lists.less"; // List Styles
+@import "project/ferret/tabs.less"; // Content Tabs Styles
+@import "project/ferret/tables.less"; // Table Styles
+@import "project/ferret/tooltips.less"; // Tooltip Styles
 
 
 // Main Project Specific CSS and Overrides
